Added addend parameter to extendDelay(). Added test case for server-side rendering. Added test for memory leaks.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-seq",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Create React components that output contents from async generators",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node --expose-gc ./node_modules/mocha/bin/mocha.js -- test/*.js",
-    "test:watch": "./node_modules/mocha/bin/mocha.js --parallel --watch -- test/*.js"
+    "test": "./node_modules/mocha/bin/mocha.js -- test/*.js",
+    "test:watch": "./node_modules/mocha/bin/mocha.js --parallel --watch -- test/*.js",
+    "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js -- test/*.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "htm": "^3.1.1",
+    "memorystream": "^0.3.1",
     "mocha": "^10.0.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0"
