--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-seq",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "Create React components that output contents from async generators",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js -- test/*.js",
-    "test:watch": "./node_modules/mocha/bin/mocha.js --parallel --watch -- test/*.js",
-    "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js -- test/*.js"
+    "test": "./node_modules/mocha/bin/mocha.js -- test/*.test.js",
+    "test:watch": "./node_modules/mocha/bin/mocha.js --parallel --watch -- test/*.test.js",
+    "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js -- test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "react": "^18.0.0"
   },
   "devDependencies": {
+    "abort-controller": "^3.0.0",
     "chai": "^4.3.6",
     "htm": "^3.1.1",
     "memorystream": "^0.3.1",
