--- a/examples/swapi/package.json
+++ b/examples/swapi/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "payment-example",
+  "name": "swapi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@patched/hookrouter": "^1.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.1.3",
-    "source-map-explorer": "^2.5.3",
+    "react-seq": "0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "analyze": "source-map-explorer --gzip 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
