--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "memorystream": "^0.3.1",
     "mocha": "^10.0.0",
     "mocha-skip-if": "^1.0.1",
+    "node-fetch": "^3.2.10",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0"
   }
