--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
     "test:debug": "./node_modules/mocha/bin/mocha.js --inspect-brk --require test/setup.js -- test/*.test.js",
     "test:watch": "./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel --watch -- test/*.test.js",
-    "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js"
+    "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
+    "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "abort-controller": "^3.0.0",
+    "c8": "^7.12.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "memorystream": "^0.3.1",
@@ -41,6 +43,7 @@
     "mocha-skip-if": "^1.0.1",
     "node-fetch": "^3.2.10",
     "react-dom": "^18.2.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "sinon": "^14.0.1"
   }
 }
