--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
+    "test": "./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel -- test/*.test.js",
     "test:debug": "./node_modules/mocha/bin/mocha.js --inspect-brk --require test/setup.js -- test/*.test.js",
     "test:watch": "./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel --watch -- test/*.test.js",
     "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
-    "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js"
+    "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel -- test/*.test.js"
   },
   "repository": {
     "type": "git",
