Updated eslint config.

--- a/examples/payment/package.json
+++ b/examples/payment/package.json
@@ -24,7 +24,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": [
+        "warn",
+        {
+          "additionalHooks": "use(Progressive(State)?|Sequential(State)?)"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
