--- a/examples/media-cap/package.json
+++ b/examples/media-cap/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.3.0",
+    "react-seq": "^0.3.1",
     "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +24,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": [
+        "warn",
+        {
+          "additionalHooks": "use(Progressive(State)?|Sequential(State)?)"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
