--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-seq",
   "version": "0.3.1",
-  "description": "Create React components that output contents from async generators",
+  "description": "React hooks for working with async generators and promises",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel -- test/*.test.js",
-    "test:debug": "./node_modules/mocha/bin/mocha.js --inspect-brk --require test/setup.js -- test/*.test.js",
-    "test:watch": "./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel --watch -- test/*.test.js",
+    "test": "./node_modules/mocha/bin/mocha.js --require test/jsdom.js --require test/setup.js --parallel -- test/*.test.js",
+    "test:debug": "./node_modules/mocha/bin/mocha.js --inspect-brk  --require test/jsdom.js --require test/setup.js -- test/*.test.js",
+    "test:watch": "./node_modules/mocha/bin/mocha.js  --require jsdom.js --require test/setup.js --parallel --watch -- test/*.test.js",
     "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
     "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel -- test/*.test.js"
   },
@@ -38,6 +38,7 @@
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
+    "jsdom": "^20.0.1",
     "memorystream": "^0.3.1",
     "mocha": "^10.0.0",
     "mocha-skip-if": "^1.0.1",
