--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha.js --require test/jsdom.js --require test/setup.js --parallel -- test/*.test.js",
     "test:debug": "./node_modules/mocha/bin/mocha.js --inspect-brk  --require test/jsdom.js --require test/setup.js -- test/*.test.js",
-    "test:watch": "./node_modules/mocha/bin/mocha.js  --require jsdom.js --require test/setup.js --parallel --watch -- test/*.test.js",
+    "test:watch": "./node_modules/mocha/bin/mocha.js  --require test/jsdom.js --require test/setup.js --parallel --watch -- test/*.test.js",
     "test:gc": "node --expose-gc ./node_modules/mocha/bin/mocha.js --require test/setup.js -- test/*.test.js",
-    "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/setup.js --parallel -- test/*.test.js"
+    "coverage": "./node_modules/c8/bin/c8.js ./node_modules/mocha/bin/mocha.js --require test/jsdom.js --require test/setup.js --parallel -- test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,7 @@
     "jsdom": "^20.0.1",
     "memorystream": "^0.3.1",
     "mocha": "^10.0.0",
-    "mocha-skip-if": "^1.0.1",
+    "mocha-skip-if": "^1.0.2",
     "node-fetch": "^3.2.10",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
