--- a/examples/swapi-ssr/package.json
+++ b/examples/swapi-ssr/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fastify/caching": "^8.0.1",
     "@fastify/compress": "^6.1.1",
+    "@fastify/cors": "^8.2.0",
     "@fastify/etag": "^4.1.0",
     "@fastify/static": "^6.5.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,13 +14,16 @@
     "abort-controller": "^3.0.0",
     "fastify": "^4.9.2",
     "node-fetch": "^3.2.10",
+    "opener": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.3.8",
+    "react-seq": "^0.4.9",
+    "source-map": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer --gzip 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
