--- a/examples/swapi-ssr/package.json
+++ b/examples/swapi-ssr/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-seq": "^0.4.9",
     "source-map": "^0.7.4",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
