--- a/examples/swapi-ssr/package.json
+++ b/examples/swapi-ssr/package.json
@@ -19,14 +19,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.4.9",
+    "react-seq": "^0.5.0",
     "source-map": "^0.7.4",
     "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "analyze": "source-map-explorer --gzip 'build/static/js/*.js'",
-    "start": "react-scripts start",
+    "start": "node ./server/index.mjs",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
