--- a/examples/payment/package.json
+++ b/examples/payment/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.5.5",
+    "react-seq": "^0.5.8",
+    "react-test-renderer": "^18.2.0",
     "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
