--- a/examples/nobel/package.json
+++ b/examples/nobel/package.json
@@ -9,12 +9,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.5.5",
+    "react-seq": "^0.6.1",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer --gzip 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_SEQ_NO_EM=1 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
