--- a/examples/swapi-ssr/package.json
+++ b/examples/swapi-ssr/package.json
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-seq": "^0.6.3",
+    "react-seq": "^0.6.5",
     "source-map": "^0.7.4",
     "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
@@ -35,7 +35,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "react-seq"
     ]
   },
   "browserslist": {
