--- a/examples/transition/package.json
+++ b/examples/transition/package.json
@@ -11,9 +11,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-seq": "^0.7.7",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer --gzip 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
