--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "node-fetch": "^3.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "sinon": "^14.0.1"
+    "react-test-renderer": "^18.2.0"
   }
 }
