--- a/examples/ink-cli/package.json
+++ b/examples/ink-cli/package.json
@@ -2,23 +2,19 @@
 	"name": "ink-cli",
 	"version": "0.0.0",
 	"license": "MIT",
-	"bin": "run",
+	"bin": "./cli.mjs",
 	"engines": {
-		"node": ">=16"
+		"node": ">=10"
 	},
 	"scripts": {
-		"start": "node --experimental-loader ./jsx.mjs cli.mjs",
+		"start": "./transpile.mjs && node ./cli.mjs",
 		"test": "xo && ava"
 	},
 	"files": [
-		"run",
 		"cli.mjs",
-		"jsx.mjs",
-		"main.jsx"
+		"main.mjs"
 	],
 	"dependencies": {
-		"@babel/core": "^7.20.12",
-		"@babel/plugin-transform-react-jsx": "^7.20.7",
 		"ink": "^3.2.0",
 		"ink-spinner": "^4.0.3",
 		"react": "^18.2.0",
@@ -44,6 +40,8 @@
 	},
 	"devDependencies": {
 		"@ava/babel": "^2.0.0",
+		"@babel/core": "^7.20.12",
+		"@babel/plugin-transform-react-jsx": "^7.20.7",
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/register": "^7.18.9",
@@ -52,6 +50,7 @@
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-react": "^7.32.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"globby": "^13.1.3",
 		"ink-testing-library": "^2.1.0",
 		"xo": "^0.39.1"
 	}
